# RowQuery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: quality.yml  release.yml  test.yml
core/: connection.py  enums.py
examples/: 01_basic_query.py  02_model_mapping.py  03_aggregate.py  04_transactions.py  05_async.py  06_migrations.py  07_repository.py  README.md
row_query/: __init__.py
row_query/adapters/: mysql.py  oracle.py  postgresql.py  protocol.py  sqlite.py
row_query/core/: connection.py  engine.py  enums.py  exceptions.py  migration.py  params.py  registry.py  sanitizer.py  transaction.py
row_query/mapping/: __init__.py  aggregate.py  builder.py  model.py  plan.py  protocol.py
row_query/repository/: __init__.py  base.py
tests/: conftest.py
tests/contract/: test_adapter_protocol.py
tests/fixtures/sql/billing/invoice/: list.sql
tests/fixtures/sql/user/: count.sql  get_by_id.sql  insert.sql  list.sql
tests/integration/: test_sqlite.py
tests/unit/: test_aggregate_mapper.py  test_builder.py  test_engine.py  test_migration.py  test_model_mapper.py  test_params.py  test_registry.py  test_repository.py  test_sanitizer.py  test_transaction.py
