[project]
name = "RowQuery"
version = "0.1.0"
description = "A Python library for querying and manipulating data in rows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["data", "query", "manipulation", "rows"]
authors = [
    {name = "Maksim Shevtsov", email = "maksim.shautsou.dev@gmail.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]
sqlite = []
oracle = ["oracledb>=2.0.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=9.2.0",
    "oracledb>=3.0.0",
]
