[project]
name = "rowquery"
version = "0.1.0"
description = "A SQL-first Python library for querying and mapping data across multiple database backends."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["sql", "database", "query", "mapping", "ddd", "repository"]
authors = [
    {name = "Maksim Shevtsov", email = "maksim.shautsou.dev@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/maksim-shevtsov/RowQuery"
Documentation = "https://github.com/maksim-shevtsov/RowQuery#readme"
Repository = "https://github.com/maksim-shevtsov/RowQuery.git"
Issues = "https://github.com/maksim-shevtsov/RowQuery/issues"
Changelog = "https://github.com/maksim-shevtsov/RowQuery/blob/main/CHANGELOG.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1.0"]
mysql = ["mysql-connector-python>=8.0.0", "aiomysql>=0.2.0"]
sqlite = ["aiosqlite>=0.20.0"]
oracle = ["oracledb>=2.0.0"]
all = [
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
    "mysql-connector-python>=8.0.0",
    "aiomysql>=0.2.0",
    "oracledb>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["row_query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real database connections",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "A002",  # Allow shadowing builtins for `id` params in test models
    "N818",  # Allow StrictModeViolation without Error suffix (deliberate naming)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "psycopg",
    "psycopg.*",
    "oracledb",
    "oracledb.*",
    "mysql",
    "mysql.*",
    "aiomysql",
    "aiomysql.*",
    "aiosqlite",
    "aiosqlite.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "row_query.adapters.postgresql",
    "row_query.adapters.mysql",
    "row_query.adapters.oracle",
]
ignore_missing_imports = true
